edited new service 'planner' : added new route /getMealPlans
