# planner/routes/planner.js
@@ -5,15 +5,15 @@ const location = `directory: ${__dirname}, file: ${ __filename}`; //for logging 
 
 
 
-function bluePrintExample(req,res) {
+function getMealPlans(req,res) {
 
-    const msg = `bluePrintExample`;
+    const msg = `incoming getMealPlans request`;
     const locationMeta = `${location}, func: ${ __func},line:${ __line}`;
-    logger.info(msg, {'meta': `${locationMeta}`});
+    logger.info(msg,{'meta': locationMeta, 'request': req.body}); //TODO insert uuid : req.body.uuid
 
 	res.status(200).json({ bluePrintExample: 'bluePrintExample'});
   }
 
   module.exports = {
-	bluePrintExample
+      getMealPlans
   };
